Update services heading text

--- a/index.html
+++ b/index.html
@@ -3456,7 +3456,7 @@
                     <p>Probably the best rates in Tameside.</p>
                     <div class="hero-actions">
                         <a href="#booking" class="btn">Get a Free Quote</a>
-                        <a href="#services" class="btn btn-secondary">Our Services</a>
+                        <a href="#services" class="btn btn-secondary">My Services</a>
                     </div>
                 </div>
             </div>
@@ -3471,7 +3471,7 @@
                     <p>Detailed border care, weeding, and mowing tailored to your garden.</p>
                     <div class="hero-actions">
                         <a href="#booking" class="btn">Get a Free Quote</a>
-                        <a href="#services" class="btn btn-secondary">Our Services</a>
+                        <a href="#services" class="btn btn-secondary">My Services</a>
                     </div>
                 </div>
             </div>
@@ -3503,7 +3503,7 @@
     <section class="services" id="services">
         <div class="container">
             <div class="section-title">
-                <h2>Our Services</h2>
+                <h2>My Services</h2>
                 <p>Comprehensive garden care tailored to your needs</p>
             </div>
             <div class="services-grid">
@@ -3865,7 +3865,7 @@
                     </ul>
                 </div>
                 <div class="footer-column">
-                    <h3>Our Services</h3>
+                    <h3>My Services</h3>
                     <ul class="footer-links">
                         <li><a href="#">Lawn Mowing</a></li>
                         <li><a href="#">Hedge Trimming</a></li>
