Update services heading text

--- a/index.html
+++ b/index.html
@@ -3434,7 +3434,7 @@
             <nav id="nav">
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="#services">My Services</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#faq">FAQ</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
@@ -3858,7 +3858,7 @@
                     <h3>Quick Links</h3>
                     <ul class="footer-links">
                         <li><a href="#home">Home</a></li>
-                        <li><a href="#services">Services</a></li>
+                        <li><a href="#services">My Services</a></li>
                         <li><a href="#about">About Us</a></li>
                         <li><a href="#faq">FAQ</a></li>
                         <li><a href="#booking">Book</a></li>
